[package]
name = "project_status"
version = "0.1.0"
authors = ["Carl Jones <c.m.jones@dur.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.5"
termion = "1.5"
glob = "0.3"
chrono = "0.4.9"
log = "0.4.8"
env_logger = "0.6.2"
